# coral-reefs

./: README.md  index.html  package-lock.json  package.json
coral-reef-bk/: CustomSrc.py  Workflow.py  main.py  pyproject.toml
coral-reef-bk/models/: SourceModels.py  WorkflowModel.py
coral-reef-bk/sources/airtable/: manifest.yaml
coral-reef-bk/sources/airtable_employees/: manifest.yaml
coral-reef-bk/utils/: helper.py
src/: App.tsx  index.css
src/Node/: Columns.tsx  ConditionNode.tsx  CoralSQLNode.tsx  Dataset.tsx  Endpoint.tsx  EvalOP.tsx  HTTPNode.tsx  IteratorNode.tsx  LLMNode.tsx  Model.tsx  Params.tsx  PromptDataset.tsx  RLConfig.tsx  SourceHead.tsx  TestQueries.tsx  VectorNode.tsx  WebhookNode.tsx
src/components/: AIWFModel.tsx  AiModel.tsx  DelButtonEdge.tsx  NodeSidePanel.tsx
src/memory/: ClusterIDContext.tsx
src/pages/: SourcePage.tsx  WorkflowPage.tsx
src/utils/: WFconstants.ts  clusterToJSON.ts  constants.ts
